2009-12-10  Christos Zoulas <christos@zoulas.com>

	* Initialize RPC authentication flavor to AUTH_UNIX instead
	  of zero. RHEL 5 uses version 6 of the mount_arg structure
	  that includes the desired RPC authorization flavour.
	  Unfortunately amd initializes that value to zero, meaning
	  AUTH_NULL, resulting in all NFS servers denying operations.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Make sure to remove nodes in the proper order when going
	  down. Depending on what order the nodes got created it's
	  possible that the parent of a node has a bigger am_mapno
	  (index in exported_ap[]) so that it gets freed before
	  its child while the child's am_parent pointer is still
	  pointing to the already freed block of memory.
	  This change makes sure that umount_exported() cleans up
	  all children of a node first before freeing the node.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* Fix Linux-specific stuff in ops_tmpfs.c
	  AUTOFS_TMPFS_FS_FLAGS is defined only in the Linux-specific
	  conf_linux.c file, so it cannot be built on Solaris.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

        * Add missing parenthesis to fix defined(XXX
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* In the previous commit we've already made a change that
	  makes this code unnecessary since the node is returned
	  even if the backing file server is known to be down.
	  Since the code path is unused it should be removed.
	  From: Krisztian Kovacs <Kris.Kovacs@morganstanley.com>

	* amfs_generic_lookup_child() tries to find an alternate
	  file server if it detects that the current one is down.
	  However, in the comparison used to decide if a possible
	  mount is the same as the current one it compares the am_loc
	  pointers instead of the actual mntfs pointers. Since
	  amfs_lookup_one_location() creates a brand new am_loc
	  structure for the returned mntfs structure the am_loc